--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@tryghost/helpers": "1.0.1",
     "@tryghost/helpers-gatsby": "1.0.1",
+    "bulma": "^0.7.4",
     "cheerio": "^1.0.0-rc.2",
     "gatsby": "2.1.18",
     "gatsby-awesome-pagination": "0.3.3",
@@ -46,13 +47,16 @@
     "gatsby-plugin-manifest": "2.0.19",
     "gatsby-plugin-offline": "2.0.24",
     "gatsby-plugin-react-helmet": "3.0.7",
+    "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "2.0.22",
     "gatsby-source-filesystem": "2.0.23",
     "gatsby-source-ghost": "3.3.0",
     "gatsby-transformer-sharp": "2.1.14",
     "lodash": "4.17.11",
+    "node-sass": "^4.11.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-helmet": "5.2.0"
+    "react-helmet": "5.2.0",
+    "react-icons": "^3.5.0"
   }
 }
