--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "gatsby-plugin-react-helmet": "3.0.7",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "2.0.22",
+    "gatsby-plugin-stripe": "^1.2.0",
     "gatsby-source-filesystem": "2.0.23",
     "gatsby-source-ghost": "3.3.0",
+    "gatsby-source-stripe": "^2.1.7",
     "gatsby-transformer-sharp": "2.1.14",
     "lodash": "4.17.11",
     "node-sass": "^4.11.0",
