--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,10 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv environment variables files
 .env
+.env.development
+.env.production
 
 # IDE
 .idea/*
