--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tryghost/helpers-gatsby": "1.0.1",
     "bulma": "^0.7.4",
     "cheerio": "^1.0.0-rc.2",
+    "classnames": "^2.2.6",
     "gatsby": "2.1.18",
     "gatsby-awesome-pagination": "0.3.3",
     "gatsby-image": "2.0.30",
