--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "bulma": "^0.7.4",
     "cheerio": "^1.0.0-rc.2",
     "classnames": "^2.2.6",
+    "firebase": "^5.8.6",
     "gatsby": "2.1.18",
     "gatsby-awesome-pagination": "0.3.3",
     "gatsby-image": "2.0.30",
     "gatsby-plugin-advanced-sitemap": "1.0.2",
     "gatsby-plugin-feed": "2.0.14",
     "gatsby-plugin-force-trailing-slashes": "1.0.4",
+    "gatsby-plugin-google-marketing-platform": "^0.1.1",
     "gatsby-plugin-manifest": "2.0.19",
     "gatsby-plugin-offline": "2.0.24",
     "gatsby-plugin-react-helmet": "3.0.7",
@@ -60,6 +62,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-helmet": "5.2.0",
-    "react-icons": "^3.5.0"
+    "react-icons": "^3.5.0",
+    "recompose": "^0.30.0"
   }
 }
